# MultiSlider

./: .gitignore  README.md  build.sbt  commands_reference.txt
client/: CMakeLists.txt
client/source/: Client.cpp  Client.h  CommonIncludes.h  Constants.h  Exception.h  Host.cpp  Host.h  LibInterface.h  Lobby.cpp  Lobby.h  LobbyCallback.h  MultiSlider.h  RoomInfo.cpp  RoomInfo.h  Session.cpp  Session.h  SessionCallback.h  TcpInterface.h  UdpInterface.cpp  UdpInterface.h  Utility.h
client/tests/: CMakeLists.txt
client/tests/source/: ApiTest.cpp  PerfTest.cpp  ReconfigureTest.cpp  ReliabilityTest.cpp  TestsCommon.h
sample/: CMakeLists.txt
sample/source/: Main.cpp
sample/source/ApiTest/: CMakeLists.txt  Main.cpp
sample/source/TickTackToe/: CMakeLists.txt  Main.cpp
scripts/: run_latest.py
server/: build.sbt  server.conf
server/src/main/resources/: log4j.properties
server/src/main/scala/amaze/soft/: Backend.scala  BackendMessage.scala  Client.scala  Constants.scala  Depot.scala  Frontend.scala  FrontendMessage.scala  LobbyActor.scala  LobbyActor2.scala  RoomInfo.scala  SessionActor.scala
src/main/scala/amaze/soft/: Backend.scala  BackendMessage.scala  Constants.scala  Depot.scala  Frontend.scala  FrontendMessage.scala  LobbyActor.scala  Message.scala  ServerApp.scala  SessionActor.scala
watchdog/: build.sbt
watchdog/app/common/: Global.scala
watchdog/app/controllers/: Application.scala  DogApi.scala
watchdog/app/views/: main_template.scala.html  servers.scala.html
watchdog/conf/: application.conf  routes
